# polski-tutor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  RUNBOOK.md  SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: daily.md  tutor.md
log/: sessions.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_sessions.py  0003_sessions_fk.py  0004_gamify.py  0005_roles_referral.py  0006_payments.py  0007_exam_result.py  0008_groups.py  0009_assignments.py  0010_assignment_module.py  0011_fk_unique_payment_teacher.py
monitoring/netdata/: health_alarm_notify.conf.example
scripts/: daily.sh  entrypoint.sh  gen_poster.py  overlay_poster.py  push.sh
src/app/: config.py  health.py  main.py  scheduler.py
src/app/bot/: access_mw.py  charts.py  debounce_mw.py  event_mw.py  keyboards.py  quiz.py  say_cleanup_mw.py  ui.py  webapp.py  webapp_admin.py
src/app/content/: __init__.py  b1_2019.py  b1_2020.py  b1_2022_02.py  b1_2022_03.py  b1_2022_06.py  b1_2022_11.py  b1_2023_02.py  b1_2023_04.py  b1_2023_06.py  b1_2023_11.py  b1_2024_02.py  b1_2024_04.py  b1_2024_06.py  schema.py
src/app/db/: base.py  migrate_legacy.py  models.py
src/app/domain/: models.py
src/app/grammar/: __init__.py  alfabet.py  aspekt.py  czasownik_czas.py  czasownik_teraz.py  liczebniki.py  podstawy.py  przyimki.py  przymiotnik.py  przypadki.py  rzeczownik.py  schema.py  skladnia.py  zaimki.py
src/app/handlers/: admin.py  audiomatch.py  dopasowanie.py  drills.py  errors.py  exam.py  grammar.py  lesson.py  lexicon.py  listening.py  menu.py  mistakes.py  mock.py  onboarding.py  payments.py  placement.py  plan.py  privacy.py  quizpoll.py  reading.py  review.py  say.py  speaking.py  start.py  support.py  teacher.py  transformacja.py  uzupelnianie.py  writing.py
src/app/integrations/: ai.py  cloud_tts.py  speech.py  tts.py
src/app/services/: access.py  activation.py  admin_stats.py  aicost.py  alerts.py  assignments.py  attribution.py  badges.py  billing.py  broadcast.py  churn.py  clock.py  coach.py  drills.py  eval_feedback.py  events.py  exam_dates.py  exam_scale.py  experiments.py  feedback.py  freefill.py  gdpr.py  goals.py  grammar.py  groups.py  guidance.py  heartbeat.py  leaderboard.py  lexicon.py  limits.py  listening.py  missions.py  mistakes.py  mock.py  opencheck.py  placement.py  plan.py  pollquiz.py  progress.py  quest.py  (+12 more)
src/app/services/listening/: __init__.py  exercises.py  match_audio.py  schema.py
state/: progress.md  vocab.md
tests/: conftest.py  test_access.py  test_activation.py  test_admin_stats.py  test_aicost.py  test_analytics_funnel.py  test_assignments.py  test_attribution.py  test_badges.py  test_billing.py  test_broadcast.py  test_charts.py  test_churn.py  test_cloud_tts.py  test_coach.py  test_content.py  test_db_layer.py  test_debounce.py  test_drills.py  test_emph.py  test_errors.py  test_eval_feedback.py  test_events.py  test_exam_dates.py  test_exam_flow.py  test_exam_full5.py  test_exam_scale.py  test_experiments.py  test_freefill.py  test_full_reset.py  test_goals.py  test_grammar.py  test_guidance.py  test_imports.py  test_keyboards.py  test_leaderboard.py  test_lesson.py  test_lexicon.py  test_listening.py  test_missions.py  (+30 more)
