[project]
name = "polski-b1-coach"
version = "0.1.0"
description = "Telegram-бот — персональна підготовка до іспиту B1 з польської (5 грудня 2026)"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "aiogram>=3.13,<4",
    "redis>=5",
    "anthropic>=0.40",
    "pydantic-settings>=2.5",
    "tzdata>=2024.1",
    "faster-whisper>=1.0",
    "piper-tts>=1.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
