[project]
name = "polski-b1-coach"
version = "0.1.0"
description = "Telegram-бот — персональна підготовка до іспиту B1 з польської (5 грудня 2026)"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "aiogram>=3.13,<4",
    "aiohttp>=3.10",  # прямо використовується в health.py (HTTP /health)
    "redis>=5",
    "anthropic>=0.69,<1",  # >=0.69 гарантує output_config (structured output); <1 — стеля
    "pydantic-settings>=2.5",
    "tzdata>=2024.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "sentry-sdk>=2.0",  # трекінг помилок (активний лише якщо задано SENTRY_DSN)
]

[project.optional-dependencies]
# ML-важкі залежності (Whisper/piper) — окремо: Docker ставить, CI пропускає (імпортуються ліниво)
ml = [
    "faster-whisper>=1.0",
    "piper-tts>=1.2",
]
# Візуалізація (графіки прогресу) — опційно; без неї /postep деградує до тексту
viz = [
    "matplotlib>=3.8",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "aiosqlite>=0.20",  # in-memory БД для тестів async/persistence-шару
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "S"]  # S = flake8-bandit (security-lint)
ignore = [
    "E501",
    "S311",  # random для вибору завдань — не криптографія
    "S104",  # health-сервер свідомо слухає 0.0.0.0 (лише в compose-мережі, порт не публікується)
    "S110",  # try/except/pass — навмисні best-effort cleanup'и (зняти клавіатуру, видалити temp)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert — нормально в тестах

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
